# backoffAlgorithm

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  backoffAlgorithmFilePaths.cmake  lexicon.txt  manifest.yml  sbom.spdx
.github/: .cSpellWords.txt  CONTRIBUTING.md
_data/: doc_config.json
main/: annotated.html  backoff__algorithm_8c.html  backoff__algorithm_8h.html  backoff__algorithm_8h_source.html  backoff_algorithm_example.html  backoff_algorithm_functions.html  classes.html  define_backoffalgorithm_getnextbackoff.html  define_backoffalgorithm_initializeparams.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__backoff__algorithm__constants.html  group__backoff__algorithm__enum__types.html  group__backoff__algorithm__struct__types.html  index.html  modules.html  pages.html  struct_backoff_algorithm_context__t.html
source/: backoff_algorithm.c  retry_utils.c
test/: CMakeLists.txt
v1.0.0/: annotated.html  backoff__algorithm_8c.html  backoff__algorithm_8h.html  backoff__algorithm_8h_source.html  backoff_algorithm_functions.html  classes.html  define_backoffalgorithm_getnextbackoff.html  define_backoffalgorithm_initializeparams.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  files.html  (+15 more)
(+63 files in other folders)
